--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "cross-env": "^5.2.0",
     "dotenv": "^8.1.0",
     "express": "^4.17.1",
+    "fs-extra": "^8.1.0",
     "mongoose": "^5.6.11",
-    "morgan": "^1.9.1"
+    "morgan": "^1.9.1",
+    "multer": "^1.4.2"
   },
   "devDependencies": {
     "nodemon": "^1.19.1"
